crates/reddb-server/tests/snapshots/migration_parser_snapshots__apply_migration_eof.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"APPLY MIGRATION\")"
---
input: "APPLY MIGRATION"
kind:  Syntax
error: Parse error at 1:16: Unexpected token: EOF (expected: identifier)
