crates/reddb-server/tests/snapshots/migration_parser_snapshots__apply_migration_for_no_tenant.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"APPLY MIGRATION m1 FOR\")"
---
input: "APPLY MIGRATION m1 FOR"
kind:  Syntax
error: Parse error at 1:20: Unexpected token after query: FOR
