crates/reddb-server/tests/snapshots/migration_parser_snapshots__apply_migration_for_tenant_no_id.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"APPLY MIGRATION m1 FOR TENANT\")"
---
input: "APPLY MIGRATION m1 FOR TENANT"
kind:  Syntax
error: Parse error at 1:20: Unexpected token after query: FOR
