crates/reddb-server/tests/snapshots/migration_parser_snapshots__apply_migration_missing_keyword.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"APPLY m1\")"
---
UNEXPECTED OK
input: "APPLY m1"
