crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_bad_column_type.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION m1 AS CREATE TABLE t (id NOTATYPE)\")"
---
UNEXPECTED OK
input: "CREATE MIGRATION m1 AS CREATE TABLE t (id NOTATYPE)"
