crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_dangling_column_comma.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION m1 AS CREATE TABLE t (id INTEGER,)\")"
---
UNEXPECTED OK
input: "CREATE MIGRATION m1 AS CREATE TABLE t (id INTEGER,)"
