crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_dangling_depends_comma.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION m1 DEPENDS ON a, AS CREATE TABLE t (id INTEGER)\")"
---
input: "CREATE MIGRATION m1 DEPENDS ON a, AS CREATE TABLE t (id INTEGER)"
kind:  Syntax
error: Parse error at 1:29: Unexpected token: ON (expected: identifier)
