crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_eof_after_depends_on.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION m1 DEPENDS ON\")"
---
input: "CREATE MIGRATION m1 DEPENDS ON"
kind:  Syntax
error: Parse error at 1:29: Unexpected token: ON (expected: identifier)
