crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_eof_after_keyword.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION\")"
---
input: "CREATE MIGRATION"
kind:  Syntax
error: Parse error at 1:17: Unexpected token: EOF (expected: identifier)
