crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_garbage_after_name.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION m1 @#$%\")"
---
input: "CREATE MIGRATION m1 @#$%"
kind:  Syntax
error: Parse error at 1:21: Unexpected character: '@'
