crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_missing_name.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION DEPENDS ON x\")"
---
UNEXPECTED OK
input: "CREATE MIGRATION DEPENDS ON x"
